# PyTorch-Implementation-for-SASRec

./: .gitignore  .pre-commit-config.yaml  README.md  data.dvc  pyproject.toml  train.py  utils.py
.dvc/: config
configs/: config.yaml  infer.yaml  train.yaml
data/: .gitignore  ml-1m.txt.dvc
model/: blocks.py  lit_model.py  sasrec.py
scripts/: convert_and_export.py  inference.py  train.py
utils/: data.py  data_loader.py  evaluate.py  export.py  io.py  plot_metrics.py
